--- a/src/app/pages/merchant-providers-page/merchant-providers.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-providers.component.html
@@ -1,12 +1,10 @@
 <div #indexR class="entity-index">
-  <merchant-provider *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></merchant-provider>
-
   <div class="entity-index__title">
     Merchant Providers
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" [routerLink]="['/merchantproviders', 'add']"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
