--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -29,7 +29,7 @@
         <ng-template #noCode>{{params.mappingFunction(entity)}}</ng-template>
       </td>
       <td>
-        <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
+        <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
         <md-menu #actionsMenu="mdMenu" x-position="before">
           <button md-menu-item (click)="view.emit(entity)">View {{title}}</button>
           <button *ngIf="associationEnabled" md-menu-item (click)="showDisassociateDialog(entity)">Dissociate {{title}}</button>
