--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -1,7 +1,6 @@
 <div class="entity-view__table-component" [class.entity-view__table-component--homepage]="homepageMode">
-  <div class="entity-view__table-component__header" [class.entity-view__table-component__header--homepage]="homepageMode">
+  <div class="entity-view__table-component__header">
     <div class="entity-view__table-component__header__title">
-      <md-icon *ngIf="homepageMode">trending_up</md-icon>
       <span>UPCOMING TRANSACTIONS</span>
     </div>
 
@@ -19,7 +18,7 @@
 
     <md-icon class="entity-view__table-component__header__action" [class.alone]="homepageMode">more_vert</md-icon>
   </div>
-  <table class="highlight" [class.table__homepage]="homepageMode" [class.table__custom]="!homepageMode">
+  <table class="highlight table__custom">
     <thead>
     <tr>
       <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
@@ -34,7 +33,7 @@
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
       <td *ngFor="let params of columnParams" [routerLink]="['/rebills', entity.id]" [class.cell--align-right]="params.align === 'right'">{{params.mappingFunction(entity)}}</td>
       <td *ngIf="!homepageMode">
-        <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
+        <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
         <md-menu #actionsMenu="mdMenu" x-position="before">
           <button md-menu-item (click)="updateRebill(entity)">Edit Transaction</button>
           <button md-menu-item (click)="deleteEntity(entity.id)">Cancel Transaction</button>
