Improve validations on product schedule

--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -91,7 +91,7 @@
               </md-input-container>
 
               <md-input-container>
-                <input md-input placeholder="End" (keydown)="isNumeric($event)" name="end" [(ngModel)]="scheduleToAdd.end" type="text">
+                <input #endField md-input placeholder="End" (keydown)="isNumeric($event)" name="end" [(ngModel)]="scheduleToAdd.end" type="text">
               </md-input-container>
 
               <md-input-container [class.error]="formInvalid && !scheduleToAdd.period">
