--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -32,7 +32,7 @@
         <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
         <md-menu #actionsMenu="mdMenu" x-position="before">
           <button md-menu-item (click)="view.emit(entity)">View {{title}}</button>
-          <button *ngIf="associationEnabled" md-menu-item (click)="showDisassociateDialog(entity)">Dissociate {{title}}</button>
+          <button *ngIf="dissociationEnabled" md-menu-item (click)="showDisassociateDialog(entity)">Disassociate {{title}}</button>
         </md-menu>
       </td>
     </tr>
