--- a/src/app/pages/affiliates-page/affiliates.component.html
+++ b/src/app/pages/affiliates-page/affiliates.component.html
@@ -6,7 +6,7 @@
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddEntity()"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" [routerLink]="['/affiliates', 'add']"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
@@ -32,7 +32,7 @@
         (next)="next()"
         (updateLimit)="updateLimit($event)">
       </entities-table>
-      
+
     </md-card-content>
   </md-card>
 </div>
