Remove sidenav for add/edit of entities

--- a/src/app/pages/campaigns-page/campaigns.component.html
+++ b/src/app/pages/campaigns-page/campaigns.component.html
@@ -1,5 +1,4 @@
-<div #indexR class="entity-index">
-
+<div class="entity-index">
   <div class="entity-index__title">
     Campaigns
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
