--- a/src/app/pages/trackers-page/trackers/trackers.component.html
+++ b/src/app/pages/trackers-page/trackers/trackers.component.html
@@ -1,4 +1,4 @@
-<div #indexR class="entity-index">
+<div class="entity-index">
   <div class="entity-index__title">
     Trackers
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
