--- a/src/app/pages/affiliates-page/affiliates.component.html
+++ b/src/app/pages/affiliates-page/affiliates.component.html
@@ -1,6 +1,4 @@
-<div #indexR class="entity-index">
-  <affiliate *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></affiliate>
-
+<div class="entity-index">
   <div class="entity-index__title">
     Affiliates
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
