--- a/src/app/pages/email-templates-page/email-templates.component.html
+++ b/src/app/pages/email-templates-page/email-templates.component.html
@@ -1,4 +1,4 @@
-<div #indexR class="entity-index">
+<div class="entity-index">
   <div class="entity-index__title">
     Email Templates
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
