--- a/src/app/pages/merchant-providers-page/merchant-providers.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-providers.component.html
@@ -1,4 +1,4 @@
-<div #indexR class="entity-index">
+<div class="entity-index">
   <div class="entity-index__title">
     Merchant Providers
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
