--- a/src/app/pages/smtp-providers-page/smtp-providers.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-providers.component.html
@@ -1,6 +1,4 @@
-<div #indexR class="entity-index">
-  <smtp-provider *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></smtp-provider>
-
+<div class="entity-index">
   <div class="entity-index__title">
     SMTP Providers
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
